# rchat

./: .gitignore  CMakeLists.txt  README.md  broadcast_test  chatlogging_test  command_tests  run_client_100.sh  run_tests.sh  server_shut_off_test  skeleton_test  test_run_tests.sh
.github/workflows/: main.yml
admin/: admin.cpp  admin.h  main.cpp
client/: client.cpp  client.h  clientAuth.cpp  clientAuth.h  clientAuthenticator.cpp  clientAuthenticator.h  client_command_handler.h  emojis.h  main.cpp  user.cpp  user.h  userCred.cpp  userCred.h
client/assist/: clientAuth.cpp  clientAuth.h  userCred.cpp  userCred.h
client/user/: user.cpp  user.h  userCred.cpp  userCred.h
server/: ServerAuthenticator.cpp  ServerAuthenticator.h  UserHandling.cpp  UserHandling.h  chatlogging.h  commandhandler.h  emojis.h  main.cpp  server.cpp  server.h
stubUser/: main.cpp  stubUser.cpp  stubUser.h
tests/: auth_test.cpp  baseline_tests.cpp  broadcast_test.cpp  chatlogging_test.cpp  client_shut_off_test.cpp  command_tests.cpp  server_shut_off_test.cpp  skeleton_test.cpp  testClasses.h  tests.cpp
user/: user.cpp  user.h
